--- a/src/code-nasa-share.html
+++ b/src/code-nasa-share.html
@@ -42,7 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         .section::before {
-          border-top: none;
+          content: none;
         }
       }
     </style>
@@ -59,6 +59,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         email us at <a href="mailto:opensource@lists.nasa.gov">opensource@lists.nasa.gov</a>.
       </p>
     </div>
+
     <div class="section">
       <h2>Non-NASA affiliates:</h2>
       <p>
