--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -20,6 +20,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       #query {
+        width: 300px;
+        max-width: 100%;
+        box-sizing: border-box;
         padding-left: 30px;
         background: url(data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22%3E%3Cg%3E%3Cpath d=%22M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z%22 fill=%22#DCDCDC%22%3E%3C/path%3E%3C/g%3E%3C/svg%3E) no-repeat;
         border: none;
@@ -38,21 +41,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         border-bottom: 1px solid #6A6E75;
       }
 
-      .project p {
+      .project > p {
         width: 100%;
         overflow: hidden;
         text-overflow: ellipsis;
       }
 
-      .meta {
+      .project > p.meta {
         color: #6A6E75;
         font-style: italic;
       }
 
-      h2 > span {
+      .project > h2 > span {
         display: inline-block;
         border: 1px solid #6A6E75;
-        padding: 0.5em;
+        padding: 12px;
       }
 
       .tag {
